Fixed blurred text issue, add display block to canvas.

--- a/_src/styles/base/project/_globals.scss
+++ b/_src/styles/base/project/_globals.scss
@@ -23,3 +23,5 @@ body {
 	@media (min-width: 40em) { background-image: url('#{$path-images}bg.jpg'); }
 	@media (min-width: 90em) { background-image: url('#{$path-images}bg-large.jpg'); }
 }
+
+canvas { display: block; }
